# Geometric-Flow

./: .gitignore  117path.py  README.md  README_H14C3_6.md  data.json  fetch_data.py  fetch_news.py  fetch_quotes.py  index.html  model-rankings.json  n=2.py  news-a8febb0.json  news.json  openrouter-usage.json  pyproject.toml  quotes.json  talent-flows.json  token-index.json  video-voiceover.json  几何流.txt
agi/: data.json  fetch_data.py  index.html  model-rankings.json  news-a8febb0.json  news.json  openrouter-usage.json  quotes.json  talent-flows.json  token-index.json
ai-global-index/: data.json  index.html  model-rankings.json  news-a8febb0.json  news.json  openrouter-usage.json  quotes.json  talent-flows.json  token-index.json
docs/: CNAME  H14C3_6_RESULTS.md  H14C3_8A_RESULTS.md  PAPER_H134_UPDATE.md  PAPER_H135_UPDATE.md  capacity_adaptive_flow.md  cifar_benchmarks.md  data.json  fetch_data.py  fetch_model_rankings.py  fetch_news.py  fetch_openrouter_usage.py  fetch_quotes.py  fetch_talent_flows.py  fetch_token_index.py  fetch_video_voiceovers.py  functional_geometry.md  h1312_results.md  h1313_scope_ablation_results.md  h1313_transformer_lora_results.md  h1314_gpt2_full_depth_results.md  index.html  model-rankings.json  news-a8febb0.json  news.json  openrouter-usage.json  quotes.json  research_history.md  stochastic_history.md  talent-flows.json  token-index.json  variational_foundation.md  video-voiceover.json
examples/: geometric_flow_mnist.py
experiments/: analyze_phase_g_results.py  capacity_adaptive_quotient_smoke.py  cifar10_configs.py  d7_fixed_rank_tangent_benchmark.py  functional_projection_toy.py  h10_progress_budget_benchmark.py  h1310_final_matched_budget_two_way.py  h1311_gauge_covariant_momentum.py  h1312_coupled_channel_covariance.py  h1313a_tiny_transformer_lora_coupled.py  (+21 more)
(+70 files in other folders)
