[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometric-flow-codex"
version = "0.1.0"
description = "Geometry-first PyTorch optimization tools with HVP curvature, CG navigation, and phase scanning."
readme = "geometric_flow/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometric_flow*"]
