[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoflow-codex"
version = "0.1.0"
description = "GeoFlow: functional-time geometric optimization for redundantly parameterized models, first realized on low-rank LoRA quotient geometry."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometric_flow*"]
