[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoflow-codex"
version = "0.1.0"
description = "GeoFlow: functional-time geometric optimization for redundantly parameterized models, first realized on low-rank LoRA quotient geometry."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
gpt2 = [
  "transformers>=4.40",
  "datasets>=2.18",
  "huggingface_hub>=0.23",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometric_flow*"]
